Bug 267896 - Close tab button is always inactive
Summary: Close tab button is always inactive
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.6.1
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 269179 269417 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-03-07 18:42 UTC by Szymon Świerkosz
Modified: 2011-05-16 03:39 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.3
Sentry Crash Report:


Attachments
Screen of Konsole (17.25 KB, image/png)
2011-03-07 18:42 UTC, Szymon Świerkosz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Szymon Świerkosz 2011-03-07 18:42:18 UTC
Created attachment 57752 [details]
Screen of Konsole

Version:           4.6.1 (using KDE 4.6.1) 
OS:                Linux

I am unable to close a tab in Konsole using button in the bottom-right corner.

Reproducible: Always

Steps to Reproduce:
Open two tabs in Konsole.

Actual Results:  
Close tab button is inactive.

Expected Results:  
Close tab button is active.
Comment 1 Alexander Potashev 2011-03-07 23:52:14 UTC
I can confirm this on Gentoo and KDE SC 4.6.1.
Comment 2 Kurt Hindenburg 2011-03-08 00:51:17 UTC
The close button was disabled on purpose for 4.6;  there are issues when the tab is closed via this method.
Comment 3 Ahmad Samir 2011-03-09 02:09:34 UTC
I also see the "close tab" option has been removed from the context menu accessed by right-clicking on the tab.

But the "close tab" option is still there in the right-click menu inside the konsole window itself...
Comment 4 Kurt Hindenburg 2011-03-23 03:12:15 UTC
*** Bug 269179 has been marked as a duplicate of this bug. ***
Comment 5 Dimitrios Glentadakis 2011-03-23 20:45:43 UTC
The close button it works for me now since the last update
konsole-4.6.1-4.mga1

* Sat Mar 19 2011 dmorgan <dmorgan> 1:4.6.1-4.mga1
+ Revision: 74585
- Re-enable konsole close menu
Comment 6 Ahmad Samir 2011-03-24 01:44:55 UTC
(In reply to comment #5)
> The close button it works for me now since the last update
> konsole-4.6.1-4.mga1
> 
> * Sat Mar 19 2011 dmorgan <dmorgan> 1:4.6.1-4.mga1
> + Revision: 74585
> - Re-enable konsole close menu

This was only enabled for testing purposes, based on this comment https://bugs.kde.org/show_bug.cgi?id=185466#c67 that the issue is fixed with the patches in KDE git. (After all this change was done in Cauldron, a development release).

If the bug isn't fixed before Mageia first RC, the change will be reverted.
Comment 7 Kurt Hindenburg 2011-03-26 03:08:29 UTC
*** Bug 269417 has been marked as a duplicate of this bug. ***
Comment 8 Kurt Hindenburg 2011-04-05 17:36:50 UTC
Git commit 467fb1edcbc53081de348251cef490ed5002fa3b by Kurt Hindenburg.
Committed on 05/04/2011 at 17:11.
Pushed by hindenburg into branch 'master'.

Restore 'Close Tab' on the tab context menu and the close tabbar button.

These 2 options were disabled due to they messed up the menu texts
after the fix for bko 185466.
The close method via dbus has been disabled as it causes menu issues.

Most of patch to fix 'Close Tab' by Albert Astals Cid aacid@kde.org
BUG: 267896
CCBUG: 185466
FIXED-IN: 4.6.3

M  +2    -1    src/Session.h     
M  +7    -14   src/ViewContainer.cpp     
M  +1    -1    src/ViewContainer.h     
M  +13   -0    src/ViewManager.cpp     
M  +2    -0    src/ViewManager.h     

http://commits.kde.org/konsole/467fb1edcbc53081de348251cef490ed5002fa3b
Comment 9 Kurt Hindenburg 2011-04-09 22:07:16 UTC
Git commit 05367a7e7463435e7b0a50827875f6dd6ee1940c by Kurt Hindenburg.
Committed on 09/04/2011 at 22:10.
Pushed by hindenburg into branch 'KDE/4.6'.

Restore 'Close Tab' on the tab context menu and the close tabbar button.

These 2 options were disabled due to they messed up the menu texts
after the fix for bko 185466.
The close method via dbus has been disabled as it causes menu issues.

Most of patch to fix 'Close Tab' by Albert Astals Cid aacid@kde.org
CCBUG: 267896
CCBUG: 185466
FIXED-IN: 4.6.3
CCMAIL: aacid@kde.org
(cherry picked from commit 467fb1edcbc53081de348251cef490ed5002fa3b)

M  +2    -1    src/Session.h     
M  +6    -13   src/ViewContainer.cpp     
M  +1    -1    src/ViewContainer.h     
M  +13   -0    src/ViewManager.cpp     
M  +2    -0    src/ViewManager.h     

http://commits.kde.org/konsole/05367a7e7463435e7b0a50827875f6dd6ee1940c